<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/_008000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTask"
            android:text="@string/description"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/_008000"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            android:text="@string/priority"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>