<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:background="@android:color/transparent"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:padding="15dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        />

<!--    <androidx.appcompat.widget.AppCompatEditText-->
<!--        android:id="@+id/etPriority"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/enter_priority"-->
<!--        android:background="@color/white"-->
<!--        android:padding="15dp"-->
<!--        -->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etDescription"-->
<!--        />-->
    <Spinner
        android:id="@+id/etPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPriority"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>